iki task - fix z-index

--- a/projects/iki-task/src/styles/index.scss
+++ b/projects/iki-task/src/styles/index.scss
@@ -165,6 +165,7 @@ body {
             width: 40rem;
             bottom: 31rem;
             left: 50%;
+            z-index: 1;
             transform: translateX(-87%) rotate(347deg);
             animation: levitate-first 6s ease-in-out infinite;
         }
@@ -175,6 +176,7 @@ body {
             right: 50%;
             transform: translateX(140%) rotate(8deg);
             animation: levitate-second 8s ease-in-out infinite 1.5s;
+            z-index: 1;
         }
 
         &-task-third {
@@ -183,6 +185,7 @@ body {
             right: 50%;
             transform: translateX(50%) rotate(355deg);
             animation: levitate-third 8s ease-in-out infinite 3s;
+            z-index: 1;
         }
     }
 
